# event-calendar

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml  sources.yaml
.github/workflows/: deploy.yml
db/: migrate.sh
db/migrations/: 0001_init.sql  0002_drop_dead.sql
deploy/: crontab
services/scraper/: Dockerfile  pyproject.toml
services/scraper/eventscraper/: __init__.py  cli.py  config.py  dedupe.py  models.py  normalize.py  pipeline.py  store.py
services/scraper/eventscraper/extract/: __init__.py  llm.py  schema.py
services/scraper/eventscraper/fetch/: __init__.py  base.py  feed.py  http.py  sitemap.py
services/scraper/tests/: test_fetch_real_sources.py  test_normalize.py  test_pipeline.py
services/scraper/tests/fixtures/: ckeller_konzerte.html  jena_event_detail.html  jena_sitemap_index.xml
services/web/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
services/web/prisma/: schema.prisma
services/web/src/app/: layout.tsx  page.tsx
services/web/src/app/api/ical/: route.ts
services/web/src/lib/: db.ts  filters.ts  ical.test.ts  ical.ts
