[project]
name = "eventscraper"
version = "0.1.0"
description = "Jena/Weimar/Apolda event ingestion pipeline (fetch -> LLM extract -> normalize -> dedupe -> store)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "icalendar>=5.0",
    "beautifulsoup4>=4.12",
    "pydantic>=2.6",
    "psycopg[binary]>=3.1",
    "python-dateutil>=2.9",
    "pyyaml>=6.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]
# Phase 3: JS-rendered sources
headless = ["playwright>=1.44"]

[project.scripts]
eventscraper = "eventscraper.cli:main"

[tool.setuptools.packages.find]
include = ["eventscraper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
